--- a/Week 6 Notes/Recursive Tree/Makefile
+++ b/Week 6 Notes/Recursive Tree/Makefile
@@ -6,7 +6,7 @@ endif
 
 # make sure the the OF_ROOT location is defined
 ifndef OF_ROOT
-    OF_ROOT=$(realpath ../../../../../../Applications/openFramework/../../../../../../Applications/openFramework/Applications/openFramework/../../../../../../Applications/openFramework/../../../../../../Applications/openFramework/Applications/openFramework/Applications/openFramework)
+    OF_ROOT=$(realpath ../../../../../../Applications/openFramework)
 endif
 
 # call the project makefile!
