--- a/Week 6 Notes/Recursive Tree/Recursive Tree.xcodeproj/xcshareddata/xcschemes/Recursive Tree Debug.xcscheme
+++ b/Week 6 Notes/Recursive Tree/Recursive Tree.xcodeproj/xcshareddata/xcschemes/Recursive Tree Debug.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0600"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,72 +15,77 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "RecursiveTree.app"
-               BlueprintName = "RecursiveTree"
-               ReferencedContainer = "container:RecursiveTree.xcodeproj">
+               BuildableName = "Recursive Tree.app"
+               BlueprintName = "Recursive Tree"
+               ReferencedContainer = "container:Recursive Tree.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Release">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "RecursiveTree.app"
-            BlueprintName = "RecursiveTree"
-            ReferencedContainer = "container:RecursiveTree.xcodeproj">
+            BuildableName = "Recursive Tree.app"
+            BlueprintName = "Recursive Tree"
+            ReferencedContainer = "container:Recursive Tree.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "RecursiveTree.app"
-            BlueprintName = "RecursiveTree"
-            ReferencedContainer = "container:RecursiveTree.xcodeproj">
+            BuildableName = "Recursive Tree.app"
+            BlueprintName = "Recursive Tree"
+            ReferencedContainer = "container:Recursive Tree.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "RecursiveTree.app"
-            BlueprintName = "RecursiveTree"
-            ReferencedContainer = "container:RecursiveTree.xcodeproj">
+            BuildableName = "Recursive Tree.app"
+            BlueprintName = "Recursive Tree"
+            ReferencedContainer = "container:Recursive Tree.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Release">
+      buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
